kubernetes/apps/default/proxmox/app/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: "proxmox"
subsets:
  - addresses:
      - ip: 192.168.40.100
      - ip: 192.168.40.101
    ports:
      - name: https
        port: 8006
        protocol: TCP
