kubernetes/apps/default/proxmox/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "proxmox"
spec:
  ports:
    - name: https
      protocol: TCP
      port: 8006
      targetPort: 8006
  type: ClusterIP
