kubernetes/apps/default/proxmox/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "proxmox-network-application"
spec:
  ingressClassName: "internal"
  rules:
    - host: &hostname "proxmox.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "proxmox"
                port:
                  number: 8006
  tls:
    - hosts:
        - *hostname
